feat: Integrate Framer for parallax canvas
Adds Framer integration to the Infinite 3D Parallax System. This includes updating dependencies, import maps, and refactoring the `InfiniteCanvas` component to utilize Framer's `Frame` component for better animation control and component composition. The entry point `index.tsx` is updated to pass default image content to the new Framer-based canvas.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "framer": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
